@@ -1,7 +1,5 @@
 package level.tools;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -13,11 +11,13 @@ import java.util.Random;
 public enum DesignLabel {
     DEFAULT;
 
-    private static final List<DesignLabel> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<DesignLabel> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
+    /**
+     * @return A random enum-value
+     */
     public static DesignLabel randomDesign() {
         return VALUES.get(RANDOM.nextInt(SIZE));
     }
