@@ -1,7 +1,5 @@
 package level.tools;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -11,11 +9,13 @@ public enum LevelSize {
     MEDIUM,
     LARGE;
 
-    private static final List<LevelSize> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<LevelSize> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
+    /**
+     * @return A random enum-value
+     */
     public static LevelSize randomSize() {
         return VALUES.get(RANDOM.nextInt(SIZE));
     }
